another try at fixing lower iframe cutoff on large screens

--- a/style.css
+++ b/style.css
@@ -230,11 +230,11 @@ h1 {
   padding-bottom: 1em;
 }
 
-iframe {
+/* iframe {
   /* width: min(auto, 100%); */
   /* height: 100%; */
   /* border: none; */
-  align-self: center;
+  /* align-self: center; */ /* this line changes EVERYTHING */
   /* margin: auto; */
-}
+/*} */
   
